# Raytracing

./: README.md
C++/: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
C++/libs/stb_image/: CMakeLists.txt
C++/src/: App.cpp  App.h  AppLayers.cpp  AppLayers.h  CMakeLists.txt  main.cpp
C++/src/Core/: CMakeLists.txt  Color.h  Image.cpp  Image.h
C++/src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h
C++/src/Window/: CMakeLists.txt  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
